Работает сохранение формы

--- a/Portal SRP.ipynb
+++ b/Portal SRP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -22,11 +22,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n"
+      " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [30/Apr/2021 17:03:19] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [30/Apr/2021 17:03:19] \"\u001b[37mGET /created?id=608c0e27e9e834577d80daa7 HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
    "source": [
+    "PORTAL_PORT=49051\n",
+    "PORTAL_HOST='0.0.0.0'\n",
+    "DATABASE_PORT=27017\n",
+    "\n",
+    "import random\n",
+    "import string\n",
+    "import hmac\n",
+    "import hashlib\n",
+    "from hashlib import sha256\n",
     "from flask import Flask\n",
     "from flask import request,redirect\n",
     "from flask import Response\n",
@@ -34,6 +45,7 @@
     "from os import listdir\n",
     "from os.path import isfile, join\n",
     "import os\n",
+    "from pymongo import MongoClient\n",
     "\n",
     "app = Flask(__name__)\n",
     "\n",
@@ -55,7 +67,8 @@
     "\n",
     "@app.route('/created')\n",
     "def created():\n",
-    "    return render_template(\"created.html\")\n",
+    "    appID=request.args.get('id',\"Ошибка\")\n",
+    "    return render_template(\"created.html\",appID=appID)\n",
     "\n",
     "@app.route('/createError')\n",
     "def createError():\n",
@@ -63,18 +76,81 @@
     "\n",
     "@app.route(\"/createSave\",methods=['POST'])\n",
     "def createSave():\n",
-    "    nazv=request.form.get('name', \"\")\n",
-    "    if nazv==\"\":\n",
+    "    if request.form.get('name', \"\")==\"\":\n",
     "        return redirect(\"/createError\")\n",
-    "    #print(request.headers)\n",
-    "    print(request.form)\n",
-    "    return redirect(\"/created\")\n",
-    "    #return render_template(\"portal.html\")\n",
-    "    #return Response(\"Foo bar baz\")\n",
-    "    #return \"lol\",200\n",
-    "#port = int(os.environ.get('PORT', 49051))\n",
-    "#if __name__ == '__main__':\n",
-    "app.run(host='0.0.0.0', port=49051, threaded=True)"
+    "    if len(request.form.get('appPassword', \"\"))<10:\n",
+    "        return redirect(\"/createError\")\n",
+    "    form_text=[\"name\",\"desc\"]#,\"appPassword\"]\n",
+    "    form_checks=[\"spisok\",\"read\",\"write\",\"delete\"]\n",
+    "    appObject={i:request.form.get(i, \"\") for i in form_text}\n",
+    "    for i in form_checks:\n",
+    "        t=request.form.get(i, \"off\")\n",
+    "        if t==\"on\":\n",
+    "            t=\"zapros\"\n",
+    "        appObject[i]=t\n",
+    "    appObject[\"salt\"]=''.join(random.choices(string.ascii_letters + string.digits, k=10))\n",
+    "    appObject[\"passwordHash\"]=sha256((appObject[\"salt\"]+request.form.get('appPassword', \"\")).encode('utf-8')).hexdigest()\n",
+    "    appObject[\"secretKey\"]=sha256(''.join(random.choices(string.ascii_letters + string.digits, k=10)).encode('utf-8')).hexdigest()\n",
+    "    client = MongoClient(port=DATABASE_PORT)\n",
+    "    db=client.srp\n",
+    "    result=db.apps.insert_one(appObject)\n",
+    "    return redirect(f\"/created?id={result.inserted_id}\")\n",
+    "\n",
+    "\n",
+    "app.run(host=PORTAL_HOST, port=PORTAL_PORT, threaded=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(\"lol\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import string\n",
+    "import hmac\n",
+    "import hashlib\n",
+    "from hashlib import sha256\n",
+    "from flask import Flask\n",
+    "from flask import request,redirect\n",
+    "from flask import Response\n",
+    "from flask import render_template\n",
+    "from os import listdir\n",
+    "from os.path import isfile, join\n",
+    "import os\n",
+    "from pymongo import MongoClient\n",
+    "sha256((\"LsYLrhKJ1e\"+\"supersupersuper\").encode('utf-8')).hexdigest()==\"3c68d71c26d9b75689b56ed6d1a8820c53bbaaa91da35401b7c8d2188ebc1525\""
    ]
   }
  ],
