--- a/Portal SRP.ipynb
+++ b/Portal SRP.ipynb
@@ -23,8 +23,7 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [30/Apr/2021 17:03:19] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [30/Apr/2021 17:03:19] \"\u001b[37mGET /created?id=608c0e27e9e834577d80daa7 HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [30/Apr/2021 17:48:02] \"\u001b[37mGET /getApp?id=608c0e27e9e834577d80daa7 HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -33,6 +32,7 @@
     "PORTAL_HOST='0.0.0.0'\n",
     "DATABASE_PORT=27017\n",
     "\n",
+    "from bson.objectid import ObjectId\n",
     "import random\n",
     "import string\n",
     "import hmac\n",
@@ -80,7 +80,7 @@
     "        return redirect(\"/createError\")\n",
     "    if len(request.form.get('appPassword', \"\"))<10:\n",
     "        return redirect(\"/createError\")\n",
-    "    form_text=[\"name\",\"desc\"]#,\"appPassword\"]\n",
+    "    form_text=[\"name\",\"desc\"]\n",
     "    form_checks=[\"spisok\",\"read\",\"write\",\"delete\"]\n",
     "    appObject={i:request.form.get(i, \"\") for i in form_text}\n",
     "    for i in form_checks:\n",
@@ -94,30 +94,18 @@
     "    client = MongoClient(port=DATABASE_PORT)\n",
     "    db=client.srp\n",
     "    result=db.apps.insert_one(appObject)\n",
-    "    return redirect(f\"/created?id={result.inserted_id}\")\n",
+    "    return redirect(f\"/getApp?id={result.inserted_id}\")\n",
     "\n",
+    "@app.route(\"/getApp\",methods=['GET'])\n",
+    "def getApp():\n",
+    "    appID=request.args.get('id',\"Ошибка\")\n",
+    "    client = MongoClient(port=DATABASE_PORT)\n",
+    "    db=client.srp\n",
+    "    appObject=db.apps.find_one({\"_id\":ObjectId(appID)})\n",
+    "    return render_template(\"getApp.html\",appObject=appObject)\n",
     "\n",
+    "    \n",
     "app.run(host=PORTAL_HOST, port=PORTAL_PORT, threaded=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(\"lol\")"
    ]
   },
   {
@@ -151,6 +139,87 @@
     "import os\n",
     "from pymongo import MongoClient\n",
     "sha256((\"LsYLrhKJ1e\"+\"supersupersuper\").encode('utf-8')).hexdigest()==\"3c68d71c26d9b75689b56ed6d1a8820c53bbaaa91da35401b7c8d2188ebc1525\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from base64 import b64encode\n",
+    "from collections import OrderedDict\n",
+    "from hashlib import sha256\n",
+    "from hmac import HMAC\n",
+    "from urllib.parse import urlparse, parse_qsl, urlencode\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('608c0e27e9e834577d80daa7'),\n",
+       " 'name': 'Блокнот',\n",
+       " 'desc': 'Для записей',\n",
+       " 'spisok': 'off',\n",
+       " 'read': 'zapros',\n",
+       " 'write': 'zapros',\n",
+       " 'delete': 'off',\n",
+       " 'salt': 'uCaMoI4bKC',\n",
+       " 'passwordHash': 'a812082d47d7d6814dea0394eb51d9a7128c0222b26f330fb891520320a60b8e',\n",
+       " 'secretKey': '8b34595526a3b82a32252c9cf89f89424880d12e717128b93df0b4efc735fcff'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PORTAL_PORT=49051\n",
+    "PORTAL_HOST='0.0.0.0'\n",
+    "DATABASE_PORT=27017\n",
+    "\n",
+    "from bson.objectid import ObjectId\n",
+    "import random\n",
+    "import string\n",
+    "import hmac\n",
+    "import hashlib\n",
+    "from hashlib import sha256\n",
+    "from flask import Flask\n",
+    "from flask import request,redirect\n",
+    "from flask import Response\n",
+    "from flask import render_template\n",
+    "from os import listdir\n",
+    "from os.path import isfile, join\n",
+    "import os\n",
+    "from pymongo import MongoClient\n",
+    "\n",
+    "client = MongoClient(port=DATABASE_PORT)\n",
+    "db=client.srp\n",
+    "m=db.apps.find_one({\"_id\":ObjectId(\"608c0e27e9e834577d80daa7\")})\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pymongo.cursor.Cursor object at 0x0000028713358848>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(m)\n"
    ]
   }
  ],
