Работает навигация и просмотр списка

--- a/Portal SRP.ipynb
+++ b/Portal SRP.ipynb
@@ -23,7 +23,102 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [30/Apr/2021 17:48:02] \"\u001b[37mGET /getApp?id=608c0e27e9e834577d80daa7 HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [01/May/2021 10:51:14] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 10:51:33] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 10:51:49] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 10:52:01] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "[2021-05-01 10:58:57,681] ERROR in app: Exception on / [GET]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 2447, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1952, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1821, in handle_user_exception\n",
+      "    reraise(exc_type, exc_value, tb)\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\_compat.py\", line 39, in reraise\n",
+      "    raise value\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1950, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1936, in dispatch_request\n",
+      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
+      "  File \"<ipython-input-4-325427508e3c>\", line 95, in appList\n",
+      "    return render_template(\"appList.html\",apps=apps)\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\templating.py\", line 138, in render_template\n",
+      "    ctx.app.jinja_env.get_or_select_template(template_name_or_list),\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 930, in get_or_select_template\n",
+      "    return self.get_template(template_name_or_list, parent, globals)\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 883, in get_template\n",
+      "    return self._load_template(name, self.make_globals(globals))\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 857, in _load_template\n",
+      "    template = self.loader.load(self, name, globals)\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\loaders.py\", line 127, in load\n",
+      "    code = environment.compile(source, name, filename)\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 638, in compile\n",
+      "    self.handle_exception(source=source_hint)\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 832, in handle_exception\n",
+      "    reraise(*rewrite_traceback_stack(source=source))\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\_compat.py\", line 28, in reraise\n",
+      "    raise value.with_traceback(tb)\n",
+      "  File \"C:\\Users\\maxno\\Documents\\VKR\\templates\\appList.html\", line 26, in template\n",
+      "    {{% endif %}}\n",
+      "jinja2.exceptions.TemplateSyntaxError: unexpected '%'\n",
+      "127.0.0.1 - - [01/May/2021 10:58:57] \"\u001b[35m\u001b[1mGET / HTTP/1.1\u001b[0m\" 500 -\n",
+      "127.0.0.1 - - [01/May/2021 10:59:10] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 10:59:38] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "[2021-05-01 10:59:46,611] ERROR in app: Exception on / [GET]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 2447, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1952, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1821, in handle_user_exception\n",
+      "    reraise(exc_type, exc_value, tb)\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\_compat.py\", line 39, in reraise\n",
+      "    raise value\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1950, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1936, in dispatch_request\n",
+      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
+      "  File \"<ipython-input-4-325427508e3c>\", line 95, in appList\n",
+      "    return render_template(\"appList.html\",apps=apps)\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\templating.py\", line 138, in render_template\n",
+      "    ctx.app.jinja_env.get_or_select_template(template_name_or_list),\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 930, in get_or_select_template\n",
+      "    return self.get_template(template_name_or_list, parent, globals)\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 883, in get_template\n",
+      "    return self._load_template(name, self.make_globals(globals))\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 857, in _load_template\n",
+      "    template = self.loader.load(self, name, globals)\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\loaders.py\", line 127, in load\n",
+      "    code = environment.compile(source, name, filename)\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 638, in compile\n",
+      "    self.handle_exception(source=source_hint)\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 832, in handle_exception\n",
+      "    reraise(*rewrite_traceback_stack(source=source))\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\_compat.py\", line 28, in reraise\n",
+      "    raise value.with_traceback(tb)\n",
+      "  File \"C:\\Users\\maxno\\Documents\\VKR\\templates\\appList.html\", line 26, in template\n",
+      "    {{% endif %}}\n",
+      "jinja2.exceptions.TemplateSyntaxError: unexpected '%'\n",
+      "127.0.0.1 - - [01/May/2021 10:59:46] \"\u001b[35m\u001b[1mGET / HTTP/1.1\u001b[0m\" 500 -\n",
+      "127.0.0.1 - - [01/May/2021 11:00:03] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 11:01:11] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 11:02:23] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 11:03:37] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 11:03:49] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 11:04:14] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 11:05:20] \"\u001b[37mGET /getApp?id=608d037d264403442be30ccc HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 11:06:35] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 11:06:36] \"\u001b[37mGET /getApp?id=608d00f06f8e935b0408f24f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 11:06:52] \"\u001b[37mGET /getApp?id=608d00f06f8e935b0408f24f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 11:07:08] \"\u001b[37mGET /getApp?id=608d00f06f8e935b0408f24f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 11:07:54] \"\u001b[37mGET /getApp?id=608d00f06f8e935b0408f24f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 11:07:56] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 11:07:58] \"\u001b[33mGET /formCreate HTTP/1.1\u001b[0m\" 404 -\n",
+      "127.0.0.1 - - [01/May/2021 11:08:15] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 11:08:16] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 11:08:17] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 11:08:18] \"\u001b[37mGET /getApp?id=608d00f06f8e935b0408f24f HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -48,6 +143,7 @@
     "from pymongo import MongoClient\n",
     "\n",
     "app = Flask(__name__)\n",
+    "app.config['TEMPLATES_AUTO_RELOAD'] = True\n",
     "\n",
     "@app.after_request\n",
     "def add_header(r):\n",
@@ -104,8 +200,76 @@
     "    appObject=db.apps.find_one({\"_id\":ObjectId(appID)})\n",
     "    return render_template(\"getApp.html\",appObject=appObject)\n",
     "\n",
+    "@app.route(\"/\",methods=['GET'])\n",
+    "def appList():\n",
+    "    client = MongoClient(port=DATABASE_PORT)\n",
+    "    db=client.srp\n",
+    "    apps=list()\n",
+    "    for i in db.apps.find({}):\n",
+    "        t=i\n",
+    "        m=[\"spisok\",\"read\",\"write\",\"delete\"]\n",
+    "        status=\"off\"\n",
+    "        for i2 in m:\n",
+    "            if i[i2] == \"on\":\n",
+    "                status=\"on\"\n",
+    "        for i2 in m:\n",
+    "            if i[i2] == \"zapros\":\n",
+    "                status=\"zapros\"\n",
+    "        t[\"status\"]=status\n",
+    "        apps.append(t)\n",
+    "    return render_template(\"appList.html\",apps=apps)\n",
     "    \n",
     "app.run(host=PORTAL_HOST, port=PORTAL_PORT, threaded=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'_id': ObjectId('608d00f06f8e935b0408f24f'),\n",
+       "  'name': 'Блокнот',\n",
+       "  'desc': 'Для записей',\n",
+       "  'spisok': 'off',\n",
+       "  'read': 'zapros',\n",
+       "  'write': 'zapros',\n",
+       "  'delete': 'off',\n",
+       "  'salt': 'kNPplKbF4U',\n",
+       "  'passwordHash': 'dae997e4ac6a96380e2bcb42f4eef430098afa658b7de95a039f76ac8602b935',\n",
+       "  'secretKey': '82dfa3f71458680c33144d96eecd9385a326adc0877255919dedb931c69ac4ac'}]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PORTAL_PORT=49051\n",
+    "PORTAL_HOST='0.0.0.0'\n",
+    "DATABASE_PORT=27017\n",
+    "\n",
+    "from bson.objectid import ObjectId\n",
+    "import random\n",
+    "import string\n",
+    "import hmac\n",
+    "import hashlib\n",
+    "from hashlib import sha256\n",
+    "from flask import Flask\n",
+    "from flask import request,redirect\n",
+    "from flask import Response\n",
+    "from flask import render_template\n",
+    "from os import listdir\n",
+    "from os.path import isfile, join\n",
+    "import os\n",
+    "from pymongo import MongoClient\n",
+    "\n",
+    "client = MongoClient(port=DATABASE_PORT)\n",
+    "db=client.srp\n",
+    "list(db.apps.find({}))"
    ]
   },
   {
@@ -221,6 +385,29 @@
    "source": [
     "print(m)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[]\n",
+    "a.append(1)\n",
+    "a.append(2)\n",
+    "a"
+   ]
   }
  ],
  "metadata": {
@@ -239,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
