--- a/Portal SRP.ipynb
+++ b/Portal SRP.ipynb
@@ -23,11 +23,7 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [01/May/2021 10:51:14] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 10:51:33] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 10:51:49] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 10:52:01] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "[2021-05-01 10:58:57,681] ERROR in app: Exception on / [GET]\n",
+      "[2021-05-01 12:07:31,710] ERROR in app: Exception on /adminSave [POST]\n",
       "Traceback (most recent call last):\n",
       "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 2447, in wsgi_app\n",
       "    response = self.full_dispatch_request()\n",
@@ -41,84 +37,23 @@
       "    rv = self.dispatch_request()\n",
       "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1936, in dispatch_request\n",
       "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-      "  File \"<ipython-input-4-325427508e3c>\", line 95, in appList\n",
-      "    return render_template(\"appList.html\",apps=apps)\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\templating.py\", line 138, in render_template\n",
-      "    ctx.app.jinja_env.get_or_select_template(template_name_or_list),\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 930, in get_or_select_template\n",
-      "    return self.get_template(template_name_or_list, parent, globals)\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 883, in get_template\n",
-      "    return self._load_template(name, self.make_globals(globals))\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 857, in _load_template\n",
-      "    template = self.loader.load(self, name, globals)\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\loaders.py\", line 127, in load\n",
-      "    code = environment.compile(source, name, filename)\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 638, in compile\n",
-      "    self.handle_exception(source=source_hint)\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 832, in handle_exception\n",
-      "    reraise(*rewrite_traceback_stack(source=source))\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\_compat.py\", line 28, in reraise\n",
-      "    raise value.with_traceback(tb)\n",
-      "  File \"C:\\Users\\maxno\\Documents\\VKR\\templates\\appList.html\", line 26, in template\n",
-      "    {{% endif %}}\n",
-      "jinja2.exceptions.TemplateSyntaxError: unexpected '%'\n",
-      "127.0.0.1 - - [01/May/2021 10:58:57] \"\u001b[35m\u001b[1mGET / HTTP/1.1\u001b[0m\" 500 -\n",
-      "127.0.0.1 - - [01/May/2021 10:59:10] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 10:59:38] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "[2021-05-01 10:59:46,611] ERROR in app: Exception on / [GET]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 2447, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1952, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1821, in handle_user_exception\n",
-      "    reraise(exc_type, exc_value, tb)\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\_compat.py\", line 39, in reraise\n",
-      "    raise value\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1950, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1936, in dispatch_request\n",
-      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-      "  File \"<ipython-input-4-325427508e3c>\", line 95, in appList\n",
-      "    return render_template(\"appList.html\",apps=apps)\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\templating.py\", line 138, in render_template\n",
-      "    ctx.app.jinja_env.get_or_select_template(template_name_or_list),\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 930, in get_or_select_template\n",
-      "    return self.get_template(template_name_or_list, parent, globals)\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 883, in get_template\n",
-      "    return self._load_template(name, self.make_globals(globals))\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 857, in _load_template\n",
-      "    template = self.loader.load(self, name, globals)\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\loaders.py\", line 127, in load\n",
-      "    code = environment.compile(source, name, filename)\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 638, in compile\n",
-      "    self.handle_exception(source=source_hint)\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 832, in handle_exception\n",
-      "    reraise(*rewrite_traceback_stack(source=source))\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\jinja2\\_compat.py\", line 28, in reraise\n",
-      "    raise value.with_traceback(tb)\n",
-      "  File \"C:\\Users\\maxno\\Documents\\VKR\\templates\\appList.html\", line 26, in template\n",
-      "    {{% endif %}}\n",
-      "jinja2.exceptions.TemplateSyntaxError: unexpected '%'\n",
-      "127.0.0.1 - - [01/May/2021 10:59:46] \"\u001b[35m\u001b[1mGET / HTTP/1.1\u001b[0m\" 500 -\n",
-      "127.0.0.1 - - [01/May/2021 11:00:03] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 11:01:11] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 11:02:23] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 11:03:37] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 11:03:49] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 11:04:14] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 11:05:20] \"\u001b[37mGET /getApp?id=608d037d264403442be30ccc HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 11:06:35] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 11:06:36] \"\u001b[37mGET /getApp?id=608d00f06f8e935b0408f24f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 11:06:52] \"\u001b[37mGET /getApp?id=608d00f06f8e935b0408f24f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 11:07:08] \"\u001b[37mGET /getApp?id=608d00f06f8e935b0408f24f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 11:07:54] \"\u001b[37mGET /getApp?id=608d00f06f8e935b0408f24f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 11:07:56] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 11:07:58] \"\u001b[33mGET /formCreate HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [01/May/2021 11:08:15] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 11:08:16] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 11:08:17] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 11:08:18] \"\u001b[37mGET /getApp?id=608d00f06f8e935b0408f24f HTTP/1.1\u001b[0m\" 200 -\n"
+      "  File \"<ipython-input-1-f13bdd31f82a>\", line 149, in adminSave\n",
+      "    db.apps.update_one({\"_id\":ObjectId(appID)},\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\bson\\objectid.py\", line 110, in __init__\n",
+      "    self.__validate(oid)\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\bson\\objectid.py\", line 213, in __validate\n",
+      "    _raise_invalid_id(oid)\n",
+      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\bson\\objectid.py\", line 38, in _raise_invalid_id\n",
+      "    raise InvalidId(\n",
+      "bson.errors.InvalidId: '' is not a valid ObjectId, it must be a 12-byte input or a 24-character hex string\n",
+      "127.0.0.1 - - [01/May/2021 12:07:31] \"\u001b[35m\u001b[1mPOST /adminSave HTTP/1.1\u001b[0m\" 500 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ImmutableMultiDict([('name', 'Блокнот'), ('desc', 'Для записей'), ('spisok', 'on'), ('read', 'on'), ('write', 'off'), ('delete', 'off'), ('adminPassword', 'password')])\n"
      ]
     }
    ],
@@ -126,6 +61,7 @@
     "PORTAL_PORT=49051\n",
     "PORTAL_HOST='0.0.0.0'\n",
     "DATABASE_PORT=27017\n",
+    "\n",
     "\n",
     "from bson.objectid import ObjectId\n",
     "import random\n",
@@ -141,6 +77,16 @@
     "from os.path import isfile, join\n",
     "import os\n",
     "from pymongo import MongoClient\n",
+    "import os.path\n",
+    "\n",
+    "if os.path.isfile('.ADMIN_PASSWORD'):\n",
+    "    with open('.ADMIN_PASSWORD','r') as f:\n",
+    "        ADMIN_PASSWORD = f.read()\n",
+    "else:\n",
+    "    with open('.ADMIN_PASSWORD','w') as f:\n",
+    "        ADMIN_PASSWORD = \"ADMIN_PASSWORD\"\n",
+    "        f.write(ADMIN_PASSWORD)\n",
+    "\n",
     "\n",
     "app = Flask(__name__)\n",
     "app.config['TEMPLATES_AUTO_RELOAD'] = True\n",
@@ -169,6 +115,10 @@
     "@app.route('/createError')\n",
     "def createError():\n",
     "    return render_template(\"createError.html\")\n",
+    "\n",
+    "@app.route('/saveError')\n",
+    "def saveError():\n",
+    "    return render_template(\"saveError.html\")\n",
     "\n",
     "@app.route(\"/createSave\",methods=['POST'])\n",
     "def createSave():\n",
@@ -217,32 +167,73 @@
     "                status=\"zapros\"\n",
     "        t[\"status\"]=status\n",
     "        apps.append(t)\n",
-    "    return render_template(\"appList.html\",apps=apps)\n",
+    "    return render_template(\"appList.html\",apps=apps,mode=\"read\")\n",
     "    \n",
+    "@app.route(\"/admin\",methods=['GET'])\n",
+    "def admin():\n",
+    "    client = MongoClient(port=DATABASE_PORT)\n",
+    "    db=client.srp\n",
+    "    apps=list()\n",
+    "    for i in db.apps.find({}):\n",
+    "        t=i\n",
+    "        m=[\"spisok\",\"read\",\"write\",\"delete\"]\n",
+    "        status=\"off\"\n",
+    "        for i2 in m:\n",
+    "            if i[i2] == \"on\":\n",
+    "                status=\"on\"\n",
+    "        for i2 in m:\n",
+    "            if i[i2] == \"zapros\":\n",
+    "                status=\"zapros\"\n",
+    "        t[\"status\"]=status\n",
+    "        apps.append(t)\n",
+    "    return render_template(\"appList.html\",apps=apps,mode=\"admin\")\n",
+    "\n",
+    "@app.route(\"/adminApp\")\n",
+    "def adminApp():\n",
+    "    appID=request.args.get('id',\"Ошибка\")\n",
+    "    client = MongoClient(port=DATABASE_PORT)\n",
+    "    db=client.srp\n",
+    "    appObject=db.apps.find_one({\"_id\":ObjectId(appID)})\n",
+    "    return render_template(\"adminApp.html\",appObject=appObject)\n",
+    "\n",
+    "@app.route(\"/adminSave\",methods=['POST'])\n",
+    "def adminSave():\n",
+    "    print(request.form)\n",
+    "    if request.form.get('name', \"\")==\"\":\n",
+    "        return redirect(\"/saveError\")\n",
+    "    if request.form.get(\"adminPassword\",\"\") != ADMIN_PASSWORD:\n",
+    "        return redirect(\"/saveError\")\n",
+    "    appID=request.form.get('appID', \"\")\n",
+    "    client = MongoClient(port=DATABASE_PORT)\n",
+    "    db=client.srp\n",
+    "    db.apps.update_one({\"_id\":ObjectId(appID)},\n",
+    "                       {'$set': \n",
+    "                       {\n",
+    "                           \"name\":request.form.get('name', \"\"),\n",
+    "                           \"decs\":request.form.get('appDesc', \"\"),\n",
+    "                           \"spisok\":request.form.get('spisok', \"\"),\n",
+    "                           \"read\":request.form.get('read', \"\"),\n",
+    "                           \"write\":request.form.get('write', \"\"),\n",
+    "                           \"delete\":request.form.get('delete', \"\"),\n",
+    "                       }})\n",
+    "    #return \"kek\"\n",
+    "    return redirect(f\"/adminApp?id={appID}\")\n",
+    "\n",
     "app.run(host=PORTAL_HOST, port=PORTAL_PORT, threaded=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'_id': ObjectId('608d00f06f8e935b0408f24f'),\n",
-       "  'name': 'Блокнот',\n",
-       "  'desc': 'Для записей',\n",
-       "  'spisok': 'off',\n",
-       "  'read': 'zapros',\n",
-       "  'write': 'zapros',\n",
-       "  'delete': 'off',\n",
-       "  'salt': 'kNPplKbF4U',\n",
-       "  'passwordHash': 'dae997e4ac6a96380e2bcb42f4eef430098afa658b7de95a039f76ac8602b935',\n",
-       "  'secretKey': '82dfa3f71458680c33144d96eecd9385a326adc0877255919dedb931c69ac4ac'}]"
+       "<pymongo.results.UpdateResult at 0x2053e6def40>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,10 +257,24 @@
     "from os.path import isfile, join\n",
     "import os\n",
     "from pymongo import MongoClient\n",
+    "import os.path\n",
     "\n",
+    "if os.path.isfile('.ADMIN_PASSWORD'):\n",
+    "    with open('.ADMIN_PASSWORD','r') as f:\n",
+    "        ADMIN_PASSWORD = f.read()\n",
+    "else:\n",
+    "    with open('.ADMIN_PASSWORD','w') as f:\n",
+    "        ADMIN_PASSWORD = \"ADMIN_PASSWORD\"\n",
+    "        f.write(ADMIN_PASSWORD)\n",
+    "        \n",
+    "appID=\"608d00f06f8e935b0408f24f\"\n",
     "client = MongoClient(port=DATABASE_PORT)\n",
     "db=client.srp\n",
-    "list(db.apps.find({}))"
+    "db.apps.update_one({\"_id\":ObjectId(appID)},\n",
+    "                   {'$set': \n",
+    "                   {\n",
+    "                       \"spisok\":\"on\",\n",
+    "                   }})"
    ]
   },
   {
@@ -407,6 +412,28 @@
     "a.append(1)\n",
     "a.append(2)\n",
     "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'lol'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('.ADMIN_PASSWORD','r') as f:\n",
+    "    ADMIN_PASSWORD = f.read()\n",
+    "ADMIN_PASSWORD"
    ]
   }
  ],
