Работает удаление приложения администратором

--- a/Portal SRP.ipynb
+++ b/Portal SRP.ipynb
@@ -23,37 +23,12 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n",
-      "[2021-05-01 12:07:31,710] ERROR in app: Exception on /adminSave [POST]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 2447, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1952, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1821, in handle_user_exception\n",
-      "    reraise(exc_type, exc_value, tb)\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\_compat.py\", line 39, in reraise\n",
-      "    raise value\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1950, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1936, in dispatch_request\n",
-      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-      "  File \"<ipython-input-1-f13bdd31f82a>\", line 149, in adminSave\n",
-      "    db.apps.update_one({\"_id\":ObjectId(appID)},\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\bson\\objectid.py\", line 110, in __init__\n",
-      "    self.__validate(oid)\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\bson\\objectid.py\", line 213, in __validate\n",
-      "    _raise_invalid_id(oid)\n",
-      "  File \"C:\\Users\\maxno\\anaconda3\\lib\\site-packages\\bson\\objectid.py\", line 38, in _raise_invalid_id\n",
-      "    raise InvalidId(\n",
-      "bson.errors.InvalidId: '' is not a valid ObjectId, it must be a 12-byte input or a 24-character hex string\n",
-      "127.0.0.1 - - [01/May/2021 12:07:31] \"\u001b[35m\u001b[1mPOST /adminSave HTTP/1.1\u001b[0m\" 500 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ImmutableMultiDict([('name', 'Блокнот'), ('desc', 'Для записей'), ('spisok', 'on'), ('read', 'on'), ('write', 'off'), ('delete', 'off'), ('adminPassword', 'password')])\n"
+      "127.0.0.1 - - [01/May/2021 12:15:33] \"\u001b[37mGET /adminApp?id=608d00f06f8e935b0408f24f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 12:15:34] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 12:15:35] \"\u001b[37mGET /adminApp?id=608d00f06f8e935b0408f24f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 12:15:59] \"\u001b[37mGET /adminApp?id=608d00f06f8e935b0408f24f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 12:16:20] \"\u001b[37mGET /adminApp?id=608d00f06f8e935b0408f24f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 12:16:34] \"\u001b[37mGET /adminApp?id=608d00f06f8e935b0408f24f HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -216,8 +191,29 @@
     "                           \"write\":request.form.get('write', \"\"),\n",
     "                           \"delete\":request.form.get('delete', \"\"),\n",
     "                       }})\n",
-    "    #return \"kek\"\n",
     "    return redirect(f\"/adminApp?id={appID}\")\n",
+    "\n",
+    "@app.route(\"/adminDelete\",methods=['POST'])\n",
+    "def adminSave():\n",
+    "    print(request.form)\n",
+    "    if request.form.get('name', \"\")==\"\":\n",
+    "        return redirect(\"/saveError\")\n",
+    "    if request.form.get(\"adminPassword\",\"\") != ADMIN_PASSWORD:\n",
+    "        return redirect(\"/saveError\")\n",
+    "    appID=request.form.get('appID', \"\")\n",
+    "    client = MongoClient(port=DATABASE_PORT)\n",
+    "    db=client.srp\n",
+    "    db.apps.update_one({\"_id\":ObjectId(appID)},\n",
+    "                       {'$set': \n",
+    "                       {\n",
+    "                           \"name\":request.form.get('name', \"\"),\n",
+    "                           \"decs\":request.form.get('appDesc', \"\"),\n",
+    "                           \"spisok\":request.form.get('spisok', \"\"),\n",
+    "                           \"read\":request.form.get('read', \"\"),\n",
+    "                           \"write\":request.form.get('write', \"\"),\n",
+    "                           \"delete\":request.form.get('delete', \"\"),\n",
+    "                       }})\n",
+    "    return redirect(\"/admin\")\n",
     "\n",
     "app.run(host=PORTAL_HOST, port=PORTAL_PORT, threaded=True)"
    ]
