При добавлении приложения показывается его секретный ключ

--- a/Portal SRP.ipynb
+++ b/Portal SRP.ipynb
@@ -23,12 +23,9 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [01/May/2021 12:15:33] \"\u001b[37mGET /adminApp?id=608d00f06f8e935b0408f24f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 12:15:34] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 12:15:35] \"\u001b[37mGET /adminApp?id=608d00f06f8e935b0408f24f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 12:15:59] \"\u001b[37mGET /adminApp?id=608d00f06f8e935b0408f24f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 12:16:20] \"\u001b[37mGET /adminApp?id=608d00f06f8e935b0408f24f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 12:16:34] \"\u001b[37mGET /adminApp?id=608d00f06f8e935b0408f24f HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [01/May/2021 12:50:22] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 12:50:32] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 12:50:32] \"\u001b[37mGET /secretKey?link_id=608d246891a8896657a8fba0 HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -82,11 +79,6 @@
     "def create():\n",
     "    return render_template(\"formCreate.html\")\n",
     "\n",
-    "@app.route('/created')\n",
-    "def created():\n",
-    "    appID=request.args.get('id',\"Ошибка\")\n",
-    "    return render_template(\"created.html\",appID=appID)\n",
-    "\n",
     "@app.route('/createError')\n",
     "def createError():\n",
     "    return render_template(\"createError.html\")\n",
@@ -115,7 +107,8 @@
     "    client = MongoClient(port=DATABASE_PORT)\n",
     "    db=client.srp\n",
     "    result=db.apps.insert_one(appObject)\n",
-    "    return redirect(f\"/getApp?id={result.inserted_id}\")\n",
+    "    link=db.links.insert_one({\"appID\":result.inserted_id})\n",
+    "    return redirect(f\"/secretKey?link_id={link.inserted_id}\")\n",
     "\n",
     "@app.route(\"/getApp\",methods=['GET'])\n",
     "def getApp():\n",
@@ -194,26 +187,27 @@
     "    return redirect(f\"/adminApp?id={appID}\")\n",
     "\n",
     "@app.route(\"/adminDelete\",methods=['POST'])\n",
-    "def adminSave():\n",
+    "def adminDelete():\n",
     "    print(request.form)\n",
-    "    if request.form.get('name', \"\")==\"\":\n",
-    "        return redirect(\"/saveError\")\n",
     "    if request.form.get(\"adminPassword\",\"\") != ADMIN_PASSWORD:\n",
     "        return redirect(\"/saveError\")\n",
     "    appID=request.form.get('appID', \"\")\n",
     "    client = MongoClient(port=DATABASE_PORT)\n",
     "    db=client.srp\n",
-    "    db.apps.update_one({\"_id\":ObjectId(appID)},\n",
-    "                       {'$set': \n",
-    "                       {\n",
-    "                           \"name\":request.form.get('name', \"\"),\n",
-    "                           \"decs\":request.form.get('appDesc', \"\"),\n",
-    "                           \"spisok\":request.form.get('spisok', \"\"),\n",
-    "                           \"read\":request.form.get('read', \"\"),\n",
-    "                           \"write\":request.form.get('write', \"\"),\n",
-    "                           \"delete\":request.form.get('delete', \"\"),\n",
-    "                       }})\n",
+    "    db.apps.delete_one({\"_id\":ObjectId(appID)})\n",
     "    return redirect(\"/admin\")\n",
+    "\n",
+    "@app.route('/secretKey')\n",
+    "def secretKey():\n",
+    "    linkID=request.args.get('link_id',\"Ошибка\")\n",
+    "    client = MongoClient(port=DATABASE_PORT)\n",
+    "    db=client.srp\n",
+    "    linkObject=db.links.find_one({\"_id\":ObjectId(linkID)})\n",
+    "    appObject=db.apps.find_one({\"_id\":ObjectId(linkObject[\"appID\"])})\n",
+    "    db.links.delete_one({\"_id\":ObjectId(linkID)})\n",
+    "    return render_template(\"secretKey.html\",appObject=appObject)\n",
+    "    #return \"lol\"\n",
+    "    #return render_template(\"created.html\",appID=appID)\n",
     "\n",
     "app.run(host=PORTAL_HOST, port=PORTAL_PORT, threaded=True)"
    ]
