Разработчик может сгенерировать новый секретный ключ

--- a/Portal SRP.ipynb
+++ b/Portal SRP.ipynb
@@ -23,9 +23,14 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [01/May/2021 12:50:22] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 12:50:32] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [01/May/2021 12:50:32] \"\u001b[37mGET /secretKey?link_id=608d246891a8896657a8fba0 HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [01/May/2021 14:30:51] \"\u001b[37mGET /devApp?id=608d39cd4f1b59bc8f97398f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 14:30:52] \"\u001b[32mPOST /devNewKey HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 14:30:52] \"\u001b[37mGET /saveError HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 14:30:55] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 14:30:56] \"\u001b[37mGET /getApp?id=608d39cd4f1b59bc8f97398f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 14:30:57] \"\u001b[37mGET /devApp?id=608d39cd4f1b59bc8f97398f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 14:31:01] \"\u001b[32mPOST /devNewKey HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 14:31:01] \"\u001b[37mGET /secretKey?link_id=608d3bf53355689f5eb87527 HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -188,7 +193,6 @@
     "\n",
     "@app.route(\"/adminDelete\",methods=['POST'])\n",
     "def adminDelete():\n",
-    "    print(request.form)\n",
     "    if request.form.get(\"adminPassword\",\"\") != ADMIN_PASSWORD:\n",
     "        return redirect(\"/saveError\")\n",
     "    appID=request.form.get('appID', \"\")\n",
@@ -206,24 +210,50 @@
     "    appObject=db.apps.find_one({\"_id\":ObjectId(linkObject[\"appID\"])})\n",
     "    db.links.delete_one({\"_id\":ObjectId(linkID)})\n",
     "    return render_template(\"secretKey.html\",appObject=appObject)\n",
-    "    #return \"lol\"\n",
-    "    #return render_template(\"created.html\",appID=appID)\n",
     "\n",
+    "@app.route(\"/devApp\")\n",
+    "def devApp():\n",
+    "    appID=request.args.get('id',\"Ошибка\")\n",
+    "    client = MongoClient(port=DATABASE_PORT)\n",
+    "    db=client.srp\n",
+    "    appObject=db.apps.find_one({\"_id\":ObjectId(appID)})\n",
+    "    return render_template(\"devApp.html\",appObject=appObject)\n",
+    "\n",
+    "@app.route(\"/devNewKey\",methods=[\"POST\"])\n",
+    "def devNewKey():\n",
+    "    #print(request.form)\n",
+    "    appID=request.form.get('appID', \"\")\n",
+    "    client = MongoClient(port=DATABASE_PORT)\n",
+    "    db=client.srp\n",
+    "    appObject=db.apps.find_one({\"_id\":ObjectId(appID)})\n",
+    "    salt=appObject[\"salt\"]\n",
+    "    dbHash=appObject[\"passwordHash\"]\n",
+    "    formHash=sha256((salt+request.form.get('devPassword', \"\")).encode('utf-8')).hexdigest()\n",
+    "    if dbHash != formHash:\n",
+    "        return redirect(\"/saveError\")\n",
+    "    newKey=sha256(''.join(random.choices(string.ascii_letters + string.digits, k=10)).encode('utf-8')).hexdigest()\n",
+    "    db.apps.update_one({\"_id\":ObjectId(appID)},\n",
+    "                       {'$set': \n",
+    "                       {\n",
+    "                           \"secretKey\":newKey\n",
+    "                       }})\n",
+    "    link=db.links.insert_one({\"appID\":ObjectId(appObject[\"_id\"])})\n",
+    "    return redirect(f\"/secretKey?link_id={link.inserted_id}\")\n",
     "app.run(host=PORTAL_HOST, port=PORTAL_PORT, threaded=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x2053e6def40>"
+       "ObjectId('608d3b199e44794488c1e482')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,22 +279,23 @@
     "from pymongo import MongoClient\n",
     "import os.path\n",
     "\n",
-    "if os.path.isfile('.ADMIN_PASSWORD'):\n",
-    "    with open('.ADMIN_PASSWORD','r') as f:\n",
-    "        ADMIN_PASSWORD = f.read()\n",
-    "else:\n",
-    "    with open('.ADMIN_PASSWORD','w') as f:\n",
-    "        ADMIN_PASSWORD = \"ADMIN_PASSWORD\"\n",
-    "        f.write(ADMIN_PASSWORD)\n",
-    "        \n",
-    "appID=\"608d00f06f8e935b0408f24f\"\n",
+    "appID=\"608d39cd4f1b59bc8f97398f\"\n",
     "client = MongoClient(port=DATABASE_PORT)\n",
     "db=client.srp\n",
+    "appObject=db.apps.find_one({\"_id\":ObjectId(appID)})\n",
+    "salt=appObject[\"salt\"]\n",
+    "dbHash=appObject[\"passwordHash\"]\n",
+    "formHash=sha256((salt+\"HEDFJKOEDHFDA\").encode('utf-8')).hexdigest()\n",
+    "if dbHash != formHash:\n",
+    "    print(\"пароль не тот\")\n",
+    "newKey=sha256(''.join(random.choices(string.ascii_letters + string.digits, k=10)).encode('utf-8')).hexdigest()\n",
     "db.apps.update_one({\"_id\":ObjectId(appID)},\n",
     "                   {'$set': \n",
     "                   {\n",
-    "                       \"spisok\":\"on\",\n",
-    "                   }})"
+    "                       \"secretKey\":newKey\n",
+    "                   }})\n",
+    "link=db.links.insert_one({\"appID\":ObjectId(appObject[\"_id\"])})\n",
+    "link.inserted_id"
    ]
   },
   {
