--- a/Portal SRP.ipynb
+++ b/Portal SRP.ipynb
@@ -23,14 +23,43 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [01/May/2021 14:30:51] \"\u001b[37mGET /devApp?id=608d39cd4f1b59bc8f97398f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 14:30:52] \"\u001b[32mPOST /devNewKey HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [01/May/2021 14:30:52] \"\u001b[37mGET /saveError HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 14:30:55] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 14:30:56] \"\u001b[37mGET /getApp?id=608d39cd4f1b59bc8f97398f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 14:30:57] \"\u001b[37mGET /devApp?id=608d39cd4f1b59bc8f97398f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 14:31:01] \"\u001b[32mPOST /devNewKey HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [01/May/2021 14:31:01] \"\u001b[37mGET /secretKey?link_id=608d3bf53355689f5eb87527 HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [01/May/2021 15:18:44] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:18:45] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:19:07] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 15:19:07] \"\u001b[37mGET /secretKey?link_id=608d473b676f6a78d657335b HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:19:08] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:19:33] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:19:35] \"\u001b[37mGET /getApp?id=608d46b5676f6a78d6573352 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:19:39] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:19:42] \"\u001b[37mGET /adminApp?id=608d46b5676f6a78d6573352 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:19:47] \"\u001b[32mPOST /adminDelete HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 15:19:47] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:19:58] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:20:03] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:20:07] \"\u001b[37mGET /devApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:20:14] \"\u001b[32mPOST /devNewKey HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 15:20:14] \"\u001b[37mGET /secretKey?link_id=608d477e676f6a78d6573368 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:20:15] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:20:16] \"\u001b[37mGET /devApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:20:18] \"\u001b[32mPOST /devNewKey HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 15:20:18] \"\u001b[37mGET /saveError HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:20:19] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:20:20] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:20:57] \"\u001b[37mGET /devApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:20:59] \"\u001b[32mPOST /devNewKey HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 15:20:59] \"\u001b[37mGET /saveError HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:21:01] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:21:02] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:21:18] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:21:19] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:22:42] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:22:52] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:22:53] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:23:02] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:25:11] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:28:02] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:29:43] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:32:35] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -39,7 +68,7 @@
     "PORTAL_HOST='0.0.0.0'\n",
     "DATABASE_PORT=27017\n",
     "\n",
-    "\n",
+    "import datetime\n",
     "from bson.objectid import ObjectId\n",
     "import random\n",
     "import string\n",
@@ -98,7 +127,7 @@
     "        return redirect(\"/createError\")\n",
     "    if len(request.form.get('appPassword', \"\"))<10:\n",
     "        return redirect(\"/createError\")\n",
-    "    form_text=[\"name\",\"desc\"]\n",
+    "    form_text=[\"name\",\"desc\",\"email\",\"devName\"]\n",
     "    form_checks=[\"spisok\",\"read\",\"write\",\"delete\"]\n",
     "    appObject={i:request.form.get(i, \"\") for i in form_text}\n",
     "    for i in form_checks:\n",
@@ -109,6 +138,7 @@
     "    appObject[\"salt\"]=''.join(random.choices(string.ascii_letters + string.digits, k=10))\n",
     "    appObject[\"passwordHash\"]=sha256((appObject[\"salt\"]+request.form.get('appPassword', \"\")).encode('utf-8')).hexdigest()\n",
     "    appObject[\"secretKey\"]=sha256(''.join(random.choices(string.ascii_letters + string.digits, k=10)).encode('utf-8')).hexdigest()\n",
+    "    appObject[\"date\"]=datetime.datetime.utcnow()\n",
     "    client = MongoClient(port=DATABASE_PORT)\n",
     "    db=client.srp\n",
     "    result=db.apps.insert_one(appObject)\n",
